Updated by task 'AUTO_TM_MT_1754979314555' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-manager-cloud-service.en/commit/ab1b3864c2f647d3d5f20c29f10f5be520484950

--- a/help/release-notes/maintenance/2024/2024-6-0.md
+++ b/help/release-notes/maintenance/2024/2024-6-0.md
@@ -4,10 +4,10 @@ description: Note sulla versione di manutenzione di  [!DNL Adobe Experience Mana
 feature: Release Information
 role: Admin
 exl-id: 69fdd03b-4adf-4b4f-a290-3ca9f1b4d737
-source-git-commit: a64c17943332782814bdacd7484e056cd445d3a9
+source-git-commit: edfefb163e2d48dc9f9ad90fa68809484ce6abb0
 workflow-type: tm+mt
 source-wordcount: '1202'
-ht-degree: 99%
+ht-degree: 95%
 
 ---
 
@@ -56,13 +56,15 @@ Con l’attivazione delle funzioni 2024.6.0 viene fornito il set di funzioni com
 ### Problemi noti {#known-issues-16799}
 
 >[!NOTE]
+>
 > Il team dei tecnici AEM ha identificato una regressione della funzionalità Lanci che influisce sulle versioni di AEM correnti a partire dalla 16461. A causa di questa regressione, i nuovi lanci (creati dopo l’applicazione di nuove versioni) che includono pagine non profonde non verranno promossi correttamente a causa di configurazioni mancanti.
-> Se i tuoi ambienti sono interessati da questo problema, puoi richiedere all’Assistenza clienti di fornirti uno script shell per identificare e aggiornare le configurazioni mancanti (riferimento interno SITES-22457).
-> Sarà resa disponibile una correzione a lungo termine che garantirà la creazione di nuovi lanci con tutte le configurazioni corrette. Fino ad allora, è disponibile su richiesta anche una versione patch interna.
+> > Se i tuoi ambienti sono interessati da questo problema, puoi richiedere all’Assistenza clienti di fornirti uno script shell per identificare e aggiornare le configurazioni mancanti (riferimento interno SITES-22457).
+> > Sarà resa disponibile una correzione a lungo termine che garantirà la creazione di nuovi lanci con tutte le configurazioni corrette. Fino ad allora, è disponibile su richiesta anche una versione patch interna.
 
 #### Moduli
 
 1. Se un utente scarica la versione di AEM Forms SDK maggiore di `AEM Forms add-on v2024.05.04.00-240400`, il file batch non riesce ad avviare il servizio Docker. Per risolvere questo problema:
+
    1. Scarica la [cartella](/help/forms/assets/sdk_hotfix.zip).
    1. Estrai il contenuto dalla cartella scaricata e copia i file `sdk.sh` e `sdk.bat`.
    1. Sostituisci i file esistenti `sdk.sh` e `sdk.bat` in AEM Forms SDK con i nuovi file.
@@ -70,6 +72,7 @@ Con l’attivazione delle funzioni 2024.6.0 viene fornito il set di funzioni com
 ### Notifica di modifica {#change-notice-16799}
 
 * Questa versione contiene le seguenti nuove versioni dell’indice del prodotto:
+
    * **damAssetLucene-11**
    * **fragments-11**
 
@@ -103,7 +106,7 @@ Con l’attivazione delle funzioni 2024.6.0 viene fornito il set di funzioni com
 >[!CAUTION]
 >
 >Utilizza l’SDK a cui si fa riferimento qui sotto, poiché è stata confermata una regressione con l’SDK precedente:
->`AEM SDK v2024.06.16647.20240607T103723Z-240500`
+>>`AEM SDK v2024.06.16647.20240607T103723Z-240500`
 
 ### Miglioramenti {#enhancements-16544}
 
@@ -119,9 +122,9 @@ Con l’attivazione delle funzioni 2024.6.0 viene fornito il set di funzioni com
 
 * GRANITE-51375: se non è specificato alcun percorso intermedio, la sincronizzazione idp genera un’eccezione NPE.
 * GUIDES-17171: l’operazione di copia e incolla dii argomenti di dimensioni superiori a 15 KB non riesce a causa di un errore imprevisto.
-* GUIDES-17088: la funzionalità per cambiare lo stato del documento dal pannello **Proprietà file** non funziona correttamente e lo stato viene cambiato in *Bozza*.
+* GUIDES-17088: la funzionalità per modificare lo stato del documento dal pannello **Proprietà file** non funziona correttamente e cambia allo stato *Bozza*.
 * GUIDES-16931: le immagini collegate dagli argomenti non vengono visualizzate nella linea di base dopo la creazione della versione.
-* GUIDES-16896: nei pannelli dei contenuti riutilizzabili non è elencato alcun elemento se nelle **Preferenze utente** è impostata la visualizzazione per **Nome file**.
+* GUIDE-16896: i pannelli di contenuto riutilizzabili non elencano gli elementi quando **Preferenze utente** è impostato per visualizzare i file in base a **Nome file**.
 
 Per ulteriori informazioni sulle funzioni nuove e migliorate e sui problemi risolti in Experience Manager Guides, vedi [Roadmap delle versioni di Experience Manager Guides](https://experienceleague.adobe.com/it/docs/experience-manager-guides/using/release-info/aem-guides-releases-roadmap).
 
@@ -131,8 +134,8 @@ Per ulteriori informazioni sulle funzioni nuove e migliorate e sui problemi riso
 
 >[!NOTE]
 > Il team dei tecnici AEM ha identificato una regressione della funzionalità Lanci che influisce sulle versioni di AEM correnti a partire dalla 16461. A causa di questa regressione, i nuovi lanci (creati dopo l’applicazione di nuove versioni) che includono pagine non profonde non verranno promossi correttamente a causa di configurazioni mancanti.
-> Se i tuoi ambienti sono interessati da questo problema, puoi richiedere all’Assistenza clienti di fornirti uno script shell per identificare e aggiornare le configurazioni mancanti (riferimento interno SITES-22457).
-> Sarà resa disponibile una correzione a lungo termine che garantirà la creazione di nuovi lanci con tutte le configurazioni corrette. Fino ad allora, è disponibile su richiesta anche una versione patch interna.
+> > Se i tuoi ambienti sono interessati da questo problema, puoi richiedere all’Assistenza clienti di fornirti uno script shell per identificare e aggiornare le configurazioni mancanti (riferimento interno SITES-22457).
+> > Sarà resa disponibile una correzione a lungo termine che garantirà la creazione di nuovi lanci con tutte le configurazioni corrette. Fino ad allora, è disponibile su richiesta anche una versione patch interna.
 
 ### Notifica di modifica {#change-notice-16544}
 
