--- a/help/implementing/cloud-manager/release-notes/2024/2024-9-0.md
+++ b/help/implementing/cloud-manager/release-notes/2024/2024-9-0.md
@@ -4,7 +4,7 @@ description: Scopri le note sulla versione 2024.9.0 di Cloud Manager in AEM as a
 feature: Release Information
 role: Admin
 exl-id: f8d738f2-f27a-4119-989c-a9383eaf220b
-source-git-commit: 169de7971fba829b0d43e64d50a356439b6e57ca
+source-git-commit: edfefb163e2d48dc9f9ad90fa68809484ce6abb0
 workflow-type: tm+mt
 source-wordcount: '367'
 ht-degree: 100%
@@ -50,7 +50,8 @@ La data di pubblicazione di Cloud Manager versione 2024.9.0 in AEM as a Cloud Se
 <!--
 ## Private beta program {#private-beta-program}
 
-For a chance to test some upcoming features, be a part of Adobe's private beta program. -->
+For a chance to test some upcoming features, be a part of Adobe's private beta program. 
+-->
 
 
 ## Correzioni di bug
@@ -58,4 +59,4 @@ For a chance to test some upcoming features, be a part of Adobe's private beta p
 * La paginazione per la vista tabella dei certificati SSL ora funziona come previsto. <!-- (CMGR-60804 - [UI] Pagination doesn't work for ssl certificates) -->
 * La versione dell’artefatto errata è stata promossa quando si utilizza il pulsante **Promuovi versione** da un’esecuzione. <!-- ( KEEP IN? SP: YES CMGR-59519 and Slack https://cq-dev.slack.com/archives/C07LFPN2R08/p1725408253474129 ) -->
 
-<!-- * Slack message says next release? SP: REMOVE (Leave in for now) SSL Certificates table in Cloud Manager now enables pagination in the user experience. ( https://jira.corp.adobe.com/browse/CMGR-61041 and Slack https://cq-dev.slack.com/archives/C07LFRE9QJU/p1725408553760009 ) --<>
+<!-- * Slack message says next release? SP: REMOVE (Leave in for now) SSL Certificates table in Cloud Manager now enables pagination in the user experience. ( https://jira.corp.adobe.com/browse/CMGR-61041 and Slack https://cq-dev.slack.com/archives/C07LFRE9QJU/p1725408553760009 ) -->
