Updated by mdAutofix.py

--- a/help/release-notes/maintenance/2024/2024-6-0.md
+++ b/help/release-notes/maintenance/2024/2024-6-0.md
@@ -58,8 +58,8 @@ Con l’attivazione delle funzioni 2024.6.0 viene fornito il set di funzioni com
 >[!NOTE]
 >
 > Il team dei tecnici AEM ha identificato una regressione della funzionalità Lanci che influisce sulle versioni di AEM correnti a partire dalla 16461. A causa di questa regressione, i nuovi lanci (creati dopo l’applicazione di nuove versioni) che includono pagine non profonde non verranno promossi correttamente a causa di configurazioni mancanti.
-> > Se i tuoi ambienti sono interessati da questo problema, puoi richiedere all’Assistenza clienti di fornirti uno script shell per identificare e aggiornare le configurazioni mancanti (riferimento interno SITES-22457).
-> > Sarà resa disponibile una correzione a lungo termine che garantirà la creazione di nuovi lanci con tutte le configurazioni corrette. Fino ad allora, è disponibile su richiesta anche una versione patch interna.
+> &#x200B;> Se i tuoi ambienti sono interessati da questo problema, puoi richiedere all’Assistenza clienti di fornirti uno script shell per identificare e aggiornare le configurazioni mancanti (riferimento interno SITES-22457).
+> &#x200B;> Sarà resa disponibile una correzione a lungo termine che garantirà la creazione di nuovi lanci con tutte le configurazioni corrette. Fino ad allora, è disponibile su richiesta anche una versione patch interna.
 
 #### Moduli
 
@@ -106,7 +106,7 @@ Con l’attivazione delle funzioni 2024.6.0 viene fornito il set di funzioni com
 >[!CAUTION]
 >
 >Utilizza l’SDK a cui si fa riferimento qui sotto, poiché è stata confermata una regressione con l’SDK precedente:
->>`AEM SDK v2024.06.16647.20240607T103723Z-240500`
+>&#x200B;>`AEM SDK v2024.06.16647.20240607T103723Z-240500`
 
 ### Miglioramenti {#enhancements-16544}
 
@@ -134,8 +134,8 @@ Per ulteriori informazioni sulle funzioni nuove e migliorate e sui problemi riso
 
 >[!NOTE]
 > Il team dei tecnici AEM ha identificato una regressione della funzionalità Lanci che influisce sulle versioni di AEM correnti a partire dalla 16461. A causa di questa regressione, i nuovi lanci (creati dopo l’applicazione di nuove versioni) che includono pagine non profonde non verranno promossi correttamente a causa di configurazioni mancanti.
-> > Se i tuoi ambienti sono interessati da questo problema, puoi richiedere all’Assistenza clienti di fornirti uno script shell per identificare e aggiornare le configurazioni mancanti (riferimento interno SITES-22457).
-> > Sarà resa disponibile una correzione a lungo termine che garantirà la creazione di nuovi lanci con tutte le configurazioni corrette. Fino ad allora, è disponibile su richiesta anche una versione patch interna.
+> &#x200B;> Se i tuoi ambienti sono interessati da questo problema, puoi richiedere all’Assistenza clienti di fornirti uno script shell per identificare e aggiornare le configurazioni mancanti (riferimento interno SITES-22457).
+> &#x200B;> Sarà resa disponibile una correzione a lungo termine che garantirà la creazione di nuovi lanci con tutte le configurazioni corrette. Fino ad allora, è disponibile su richiesta anche una versione patch interna.
 
 ### Notifica di modifica {#change-notice-16544}
 
