Updated by task 'AUTO_TM_MT_1755165350212' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-manager-cloud-service.en/commit/9887a13eab30e3ca67485ec7246d7c6cbc5bc658

--- a/help/release-notes/maintenance/2025/2025-1-0.md
+++ b/help/release-notes/maintenance/2025/2025-1-0.md
@@ -4,10 +4,10 @@ description: Note sulla versione di manutenzione di  [!DNL Adobe Experience Mana
 feature: Release Information
 role: Admin
 exl-id: 769c8f22-5e13-409b-a499-70bbafa2eaf8
-source-git-commit: e4ceba6510992f82b97effca27a98f442fff8f5c
+source-git-commit: bb149cd43158bfd1ceb43b04cc536c8c8291f968
 workflow-type: tm+mt
-source-wordcount: '1222'
-ht-degree: 86%
+source-wordcount: '1223'
+ht-degree: 90%
 
 ---
 
@@ -19,7 +19,7 @@ La sezione seguente illustra le note di rilascio tecnico sulla versione di manut
 
 Di seguito sono riepilogati i miglioramenti continui per la versione di manutenzione 19149, rilasciata pubblicamente il 21 gennaio 2025. La versione di manutenzione precedente era la 18751.
 
-L’attivazione della funzione 2025.1.0 fornisce il set completo di funzioni per questa versione di manutenzione. Per ulteriori informazioni, consulta la [roadmap delle versioni di Experience Manager](https://experienceleague.adobe.com/it/docs/experience-manager-release-information/aem-release-updates/update-releases-roadmap).
+Con la versione di attivazione delle funzioni 2025.1.0 viene fornito il set completo di funzioni per questa versione di manutenzione. Per ulteriori informazioni, consulta la [roadmap delle versioni di Experience Manager](https://experienceleague.adobe.com/it/docs/experience-manager-release-information/aem-release-updates/update-releases-roadmap).
 
 ### Miglioramenti {#enhancements-19149}
 
@@ -69,10 +69,10 @@ Per ulteriori dettagli, controlla [Modifiche alla sincronizzazione di gruppi di 
 
 Gli editor preferiti per la gestione dei contenuti headless in AEM sono:
 
-* [Editor universale](/help/edge/wysiwyg-authoring/authoring.md) per la modifica visiva.
+* [Editor universale](https://www.aem.live/docs/aem-authoring) per la modifica visiva.
 * [Editor frammenti di contenuto](/help/assets/content-fragments/content-fragments-managing.md) per la modifica basata su modulo.
 
-Ulteriori dettagli su questa rimozione sono disponibili nel documento [Deprecazione dell&#39;editor SPA.](/help/implementing/developing/hybrid/spa-editor-deprecation.md)
+Ulteriori dettagli su questa rimozione sono disponibili nel documento [Rimozione dell’editor SPA.](/help/implementing/developing/hybrid/spa-editor-deprecation.md)
 
 ### Correzioni di sicurezza {#security-19149}
 
@@ -91,7 +91,7 @@ AEM as a Cloud Service è dedicato all’ottimizzazione della sicurezza e delle 
 
 Di seguito sono riepilogati i miglioramenti continui per la versione di manutenzione 18751, rilasciata pubblicamente l’11 dicembre 2024. La versione di manutenzione precedente era la 18598.
 
-L’attivazione della funzione 2025.1.0 fornisce il set completo di funzioni per questa versione di manutenzione. Per ulteriori informazioni, consulta la [roadmap delle versioni di Experience Manager](https://experienceleague.adobe.com/it/docs/experience-manager-release-information/aem-release-updates/update-releases-roadmap).
+Con la versione di attivazione delle funzioni 2025.1.0 viene fornito il set completo di funzioni per questa versione di manutenzione. Per ulteriori informazioni, consulta la [roadmap delle versioni di Experience Manager](https://experienceleague.adobe.com/it/docs/experience-manager-release-information/aem-release-updates/update-releases-roadmap).
 
 ### Miglioramenti {#enhancements-18751}
 
