--- a/help/release-notes/universal-editor/2024/2024-07-28.md
+++ b/help/release-notes/universal-editor/2024/2024-07-28.md
@@ -4,9 +4,9 @@ description: Queste sono le note sulla versione 2024.07.28 dell’editor univers
 feature: Release Information
 role: Admin
 exl-id: 43fe2b4c-900c-49b2-aab5-eac05dd54ad3
-source-git-commit: 10580c1b045c86d76ab2b871ca3c0b7de6683044
-workflow-type: ht
-source-wordcount: '221'
+source-git-commit: bb149cd43158bfd1ceb43b04cc536c8c8291f968
+workflow-type: tm+mt
+source-wordcount: '222'
 ht-degree: 100%
 
 ---
@@ -21,8 +21,8 @@ Queste sono le note sulla versione del 28 luglio 2024 dell’editor universale.
 
 ## Novità {#what-is-new}
 
-* **URL di anteprima personalizzati**: [è ora possibile specificare un URL di anteprima personalizzato](/help/implementing/universal-editor/customizing.md#custom-preview-urls) tramite `urn:adobe:aue:config:preview meta configuration`, che verrà aperto facendo clic sul pulsante **Apri pagina** [ nella barra degli strumenti in alto a destra dell’editor](/help/sites-cloud/authoring/universal-editor/navigation.md#universal-editor-toolbar).
-   * Ciò è particolarmente utile per le applicazioni con requisiti di anteprima specifici, ad esempio quelle [che utilizzano Edge Delivery Services con l’authoring WYSIWYG](/help/edge/wysiwyg-authoring/authoring.md).
+* **URL di anteprima personalizzati**: [è ora possibile specificare un URL di anteprima personalizzato](/help/implementing/universal-editor/customizing.md#custom-preview-urls) tramite `urn:adobe:aue:config:preview meta configuration`, che verrà aperto facendo clic sul pulsante **Apri pagina** [ nella barra degli strumenti in alto a destra dell’editor.](/help/sites-cloud/authoring/universal-editor/navigation.md#universal-editor-toolbar)
+   * Ciò è particolarmente utile per le applicazioni con requisiti di anteprima specifici, ad esempio quelle [che utilizzano Edge Delivery Services con l’authoring WYSIWYG.](https://www.aem.live/docs/aem-authoring)
 * **Convalida frammento di contenuto**: è stato aggiunto il supporto per [la convalida dei campi del frammento di contenuto](/help/assets/content-fragments/content-fragments-models.md#validation), che consente di applicare regole di integrità dei dati quali i pattern regex e i vincoli di univocità.
    * In questo modo, il contenuto soddisfa i requisiti aziendali specifici prima della pubblicazione.
 
