--- a/help/release-notes/maintenance/2025/2025-4-0.md
+++ b/help/release-notes/maintenance/2025/2025-4-0.md
@@ -4,10 +4,10 @@ description: Note sulla versione di manutenzione di  [!DNL Adobe Experience Mana
 feature: Release Information
 role: Admin
 exl-id: b751e1f8-0e43-4b71-aae0-1cfbc1aad501
-source-git-commit: 290cceaf4d6dc5e647b5b21a6b70c9848699d6c1
+source-git-commit: bb149cd43158bfd1ceb43b04cc536c8c8291f968
 workflow-type: tm+mt
 source-wordcount: '2012'
-ht-degree: 98%
+ht-degree: 99%
 
 ---
 
@@ -19,7 +19,7 @@ La sezione seguente illustra le note di rilascio tecnico sulla versione di manut
 
 Di seguito sono riepilogati i miglioramenti continui per la versione di manutenzione 20476, rilasciata pubblicamente il 15 aprile 2025. La versione di manutenzione precedente era la 20133.
 
-L’attivazione della funzione 2025.4.0 fornisce il set completo di funzioni per questa versione di manutenzione. Per ulteriori informazioni, consulta la [roadmap delle versioni di Experience Manager](https://experienceleague.adobe.com/it/docs/experience-manager-release-information/aem-release-updates/update-releases-roadmap).
+Con la versione di attivazione delle funzioni 2025.4.0 viene fornito il set completo di funzioni per questa versione di manutenzione. Per ulteriori informazioni, consulta la [roadmap delle versioni di Experience Manager](https://experienceleague.adobe.com/it/docs/experience-manager-release-information/aem-release-updates/update-releases-roadmap).
 
 ### Miglioramenti {#enhancements-20476}
 
@@ -36,7 +36,7 @@ L’attivazione della funzione 2025.4.0 fornisce il set completo di funzioni per
 * SKYOPS-101147: aggiornamento caconfig impl.
 * SKYOPS-97124: sono stati aggiunti avvisi dell’Analyser per le versioni obsolete del bundle SPIFly.
 * SKYOPS-95826: aggiornamento delle versioni runtime di Java a 11.0.26 e 21.0.6.
-* SKYOPS-53671: utilizzo degli artefatti installati della clientela dai modelli di funzioni durante i riavvi di AEM (RDE).
+* SKYOPS-53671: utilizzo degli artefatti installati dal clienti dai modelli di funzioni al riavvio di AEM (RDE).
 
 ### Problemi risolti {#fixed-issues-20476}
 
@@ -77,7 +77,7 @@ AEM as a Cloud Service è dedicato all’ottimizzazione della sicurezza e delle 
 
 Di seguito sono riepilogati i miglioramenti continui per la versione di manutenzione 20133, rilasciata al pubblico il 1 aprile 2025. La versione di manutenzione precedente era la 19823.
 
-L’attivazione della funzione 2025.4.0 fornisce il set completo di funzioni per questa versione di manutenzione. Per ulteriori informazioni, consulta la [roadmap delle versioni di Experience Manager](https://experienceleague.adobe.com/it/docs/experience-manager-release-information/aem-release-updates/update-releases-roadmap).
+Con la versione di attivazione delle funzioni 2025.4.0 viene fornito il set completo di funzioni per questa versione di manutenzione. Per ulteriori informazioni, consulta la [roadmap delle versioni di Experience Manager](https://experienceleague.adobe.com/it/docs/experience-manager-release-information/aem-release-updates/update-releases-roadmap).
 
 ### Miglioramenti {#enhancements-20133}
 
@@ -112,11 +112,11 @@ L’attivazione della funzione 2025.4.0 fornisce il set completo di funzioni per
 * SITES-28537: è stata aggiunta l’opzione per rinominare i frammenti di contenuto tramite il flusso di lavoro - `rename-fragments`.
 * SITES-28538: i riferimenti devono essere nuovamente pubblicati per mantenere contenuti validi durante la creazione e la pubblicazione.
 * SITES-28549: creazione di `/cf/domains` per restituire l’ID dominio basato sul livello AEM.
-* SITES-29026: è stato aggiunto un parametro facoltativo che specifica la lingua del frammento di contenuto, utilizzando una lingua e un codice paese.
+* SITES-29026: è stato aggiunto un parametro facoltativo che specifica la lingua del frammento di contenuto, utilizzando un codice di lingua e paese.
 * SITES-29031: è stata migliorata la logica per i frammenti PATCH-ing, fornendo così prestazioni migliori.
 * SITES-29169: le risorse nello stato PUBBLICATO saranno nuovamente pubblicate se fanno riferimento a una risorsa che è stata spostata, rinominata o eliminata.
 * SITES-29376: è stato aggiunto pulsante di attivazione/disattivazione Codice per la convalida dell’eliminazione di una risorsa pubblicata.
-* SITES-29417: Aggiornamento di `/libs/cq/Page/proxy.jsp` per inoltrare la richiesta al nodo jcr:content invece di includerlo.
+* SITES-29417: Aggiorna `/libs/cq/Page/proxy.jsp` per inoltrare la richiesta al nodo jcr:content invece di includere.
 * SITES-2947: creazione/modifica della visualizzazione Kibana per confrontare i rasp di pubblicazione.
 * SITES-29733: sono state migliorate le prestazioni della ricerca di modelli tramite i tag dei frammenti di contenuto.
 * SITES-8316 - Criteri contenuto: memorizzazione nella cache di ContentPolicyManager.
@@ -198,7 +198,7 @@ Per ulteriori dettagli, controlla [Modifiche alla sincronizzazione di gruppi di 
 
 Gli editor preferiti per la gestione dei contenuti headless in AEM sono:
 
-* [Editor universale](/help/edge/wysiwyg-authoring/authoring.md) per la modifica visiva.
+* [Editor universale](https://www.aem.live/docs/aem-authoring) per la modifica visiva.
 * [Editor frammenti di contenuto](/help/assets/content-fragments/content-fragments-managing.md) per la modifica basata su modulo.
 
 Ulteriori dettagli su questa rimozione sono disponibili nel documento [Rimozione dell’editor SPA.](/help/implementing/developing/hybrid/spa-editor-deprecation.md)
