Updated by task 'AUTO_TM_MT_1755853314523' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-manager-cloud-service.en/commit/8951bfc29e5eef4c00a36b7e1e369a2622c213f8

--- a/help/release-notes/universal-editor/2025/2025-08-14.md
+++ b/help/release-notes/universal-editor/2025/2025-08-14.md
@@ -1,20 +1,19 @@
 ---
-title: Note sulla versione 2025.08.22 dell’editor universale
-description: Queste sono le note sulla versione 2025.08.22 dell’editor universale.
+title: Note sulla versione 2025.08.14 dell’editor universale
+description: Queste sono le note sulla versione 2025.08.14 dell’editor universale.
 feature: Release Information
 role: Admin
-exl-id: d16ed78d-d5a3-45bf-a415-5951e60b53f9
-source-git-commit: cd717eac1e4eb6eda3b2a60fc28ad63d92e858ec
+source-git-commit: 3df2c6470253f53019ecde70532d381f410cde36
 workflow-type: tm+mt
-source-wordcount: '241'
-ht-degree: 67%
+source-wordcount: '233'
+ht-degree: 69%
 
 ---
 
 
-# Note sulla versione 2025.08.22 dell’editor universale {#release-notes}
+# Note sulla versione 2025.08.14 dell’editor universale {#release-notes}
 
-Queste sono le note sulla versione del 22 agosto 2025 di Universal Editor.
+Queste sono le note sulla versione del 14 agosto 2025 di Universal Editor.
 
 >[!TIP]
 >
@@ -22,11 +21,8 @@ Queste sono le note sulla versione del 22 agosto 2025 di Universal Editor.
 
 ## Novità {#what-is-new}
 
-* Nuove funzionalità per [Utenti che utilizzano l&#39;editor Rich Text](#new-rte)
-   * Il titolo del collegamento è ora disponibile nella finestra di dialogo del collegamento.
-   * Scollegamento disponibile.
-   * Le voci di elenco ora supportano la formattazione in linea e i collegamenti.
-   * L’area con scorrimento è stata corretta.
+* Nuova funzionalità per [Utenti che utilizzano l&#39;editor Rich Text in anticipo](#new-rte)
+   * È stata aggiunta un’opzione di configurazione per disabilitare la destinazione nella finestra di dialogo Collegamento editor Rich Text.
 
 ## Funzioni per adozione anticipata {#early-adopter}
 
@@ -45,7 +41,9 @@ La funzione Annulla e Ripeti è ora disponibile per gli autori di contenuti dell
 
 ## Altri miglioramenti {#other-improvements}
 
-* [La funzione Annulla/Ripristina prima dell&#39;adozione](#undo-redo) non attiva più il ricaricamento della pagina quando un componente viene aggiunto tramite un&#39;operazione Annulla o Ripristina.
+* È stato risolto un problema relativo allo scorrimento a schermo intero in [nuovo editor Rich Text](#new-rte).
+* Il comportamento persistente durante la modifica dei campi condizionali è stato corretto.
+* `aem-content-fragment` è stato abilitato per il passaggio tra varianti.
 
 ## Obsoleti {#deprecations}
 
