Updated by task 'AUTO_TM_MT_1756158439011' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-manager-cloud-service.en/commit/c6fda9daae417a7b733cf50ce41b9bbb1998e9a0

--- a/help/implementing/cloud-manager/release-notes/2024/2024-11-0.md
+++ b/help/implementing/cloud-manager/release-notes/2024/2024-11-0.md
@@ -4,10 +4,10 @@ description: Ulteriori informazioni sulla versione 2024.11.0 di Cloud Manager in
 feature: Release Information
 role: Admin
 exl-id: caaaf9cf-b2b2-4337-9aac-9670320da1de
-source-git-commit: 169de7971fba829b0d43e64d50a356439b6e57ca
+source-git-commit: 10d1788e222843c0c382ecf021f3c85c6bc09af9
 workflow-type: tm+mt
-source-wordcount: '784'
-ht-degree: 97%
+source-wordcount: '790'
+ht-degree: 92%
 
 ---
 
@@ -32,15 +32,15 @@ La prossima versione pianificata è il 5 dicembre 2024.
 
 ![Campo di ricerca nelle impostazioni del dominio](/help/implementing/cloud-manager/assets/domain-settings-search.png)
 
-## Programma beta privato {#private-beta-program}
+## Programma Beta privato {#private-beta-program}
 
 Partecipa al programma beta privato di Cloud Manager e hai la possibilità di testare le prossime funzionalità.
 
-### Pagina Home di AEM {#aem-home}
+### Assistente AI in AEM {#aem-home}
 
-La pagina Home di AEM rappresenta un punto di partenza centralizzato per la gestione di contenuti, risorse e siti in Adobe Experience Manager. Progettata per offrire un’esperienza personalizzata, la pagina Home di AEM consente di navigare nell’ecosistema di AEM in modo semplice in base ai ruoli e agli obiettivi. Funge da guida e fornisce informazioni chiave e azioni consigliate per aiutare a raggiungere gli obiettivi in modo efficiente. Con un layout chiaro e personalizzato, la pagina Home di AEM assicura un accesso rapido a strumenti essenziali, supportando un’esperienza semplificata ed efficace in tutte le funzioni di AEM.
+L’Assistente AI in AEM introduce un punto di partenza centralizzato per la gestione di contenuti, risorse e siti in Adobe Experience Manager. Progettata per offrire un’esperienza personalizzata, la pagina Home di AEM consente di navigare nell’ecosistema di AEM in modo semplice in base ai ruoli e agli obiettivi. Funge da guida e fornisce informazioni chiave e azioni consigliate per aiutare a raggiungere gli obiettivi in modo efficiente. Con un layout chiaro e personalizzato, la pagina Home di AEM assicura un accesso rapido a strumenti essenziali, supportando un’esperienza semplificata ed efficace in tutte le funzioni di AEM.
 
-Disponibile per i primi utilizzatori, la pagina Home di AEM offre un’esperienza ottimizzata incentrata sul miglioramento dei flussi di lavoro, sulla definizione delle priorità degli obiettivi e sulla distribuzione dei risultati. Consentendone l’utilizzo permette di influenzare lo sviluppo della pagina Home di AEM fornendo un feedback che aiuta a modellarne il futuro e ne aumenta il valore per l’intera comunità di AEM.
+Disponibile per i primi utenti, l’Assistente per l’intelligenza artificiale in AEM offre un’esperienza ottimizzata incentrata sul miglioramento dei flussi di lavoro, sulla definizione delle priorità degli obiettivi e sulla distribuzione dei risultati. Consentendone l’utilizzo permette di influenzare lo sviluppo della pagina Home di AEM fornendo un feedback che aiuta a modellarne il futuro e ne aumenta il valore per l’intera comunità di AEM.
 
 Se ti interessa testare questa nuova funzionalità e condividere il tuo feedback, invia un’e-mail a [Grp-AemHome@adobe.com](mailto:Grp-AemHome@adobe.com) dall’indirizzo e-mail associato al tuo Adobe ID. Accertati di includere le seguenti informazioni:
 
