--- a/help/release-notes/universal-editor/2025/2025-07-09.md
+++ b/help/release-notes/universal-editor/2025/2025-07-09.md
@@ -3,13 +3,13 @@ title: Note sulla versione 2025.07.09 dell’editor universale
 description: Queste sono le note sulla versione 2025.07.09 dell’editor universale.
 feature: Release Information
 role: Admin
-source-git-commit: 62134c5b67d610f801c407e696e761ed05e02c87
-workflow-type: tm+mt
+exl-id: e10360b3-aa68-4b15-a571-2b00ced78cd9
+source-git-commit: e1922bd862a2106a274694ea1d3a98da9c186049
+workflow-type: ht
 source-wordcount: '369'
-ht-degree: 98%
+ht-degree: 100%
 
 ---
-
 
 # Note sulla versione 2025.07.09 dell’editor universale {#release-notes}
 
