Updated by task 'AUTO_TM_MT_1756986412442' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-manager-cloud-service.en/commit/82e0b6786337c9db17713cd8f8a3b95dc9c2d234

--- a/help/release-notes/universal-editor/2025/2025-08-22.md
+++ b/help/release-notes/universal-editor/2025/2025-08-22.md
@@ -1,20 +1,19 @@
 ---
-title: Note sulla versione 2025.09.04 dell’editor universale
-description: Queste sono le note sulla versione 2025.09.04 dell’editor universale.
+title: Note sulla versione 2025.08.22 dell’editor universale
+description: Queste sono le note sulla versione 2025.08.22 dell’editor universale.
 feature: Release Information
 role: Admin
-exl-id: d16ed78d-d5a3-45bf-a415-5951e60b53f9
-source-git-commit: 8ca329ad8fe64ab4c45b01ce5906d51c8db45155
+source-git-commit: bd0836a68ddbce9fc8c0f5dc06f64f96f9293952
 workflow-type: tm+mt
-source-wordcount: '239'
+source-wordcount: '241'
 ht-degree: 71%
 
 ---
 
 
-# Note sulla versione 2025.09.04 dell’editor universale {#release-notes}
+# Note sulla versione 2025.08.22 dell’editor universale {#release-notes}
 
-Queste sono le note sulla versione del 4 settembre 2025 di Universal Editor.
+Queste sono le note sulla versione del 22 agosto 2025 di Universal Editor.
 
 >[!TIP]
 >
@@ -22,7 +21,11 @@ Queste sono le note sulla versione del 4 settembre 2025 di Universal Editor.
 
 ## Novità {#what-is-new}
 
-* Il comando Copia/Incolla è disponibile per [utenti che lo hanno adottato in anticipo](#copy-paste)
+* Nuove funzionalità per [Utenti che utilizzano l&#39;editor Rich Text](#new-rte)
+   * Il titolo del collegamento è ora disponibile nella finestra di dialogo del collegamento.
+   * Scollegamento disponibile.
+   * Le voci di elenco ora supportano la formattazione in linea e i collegamenti.
+   * L’area con scorrimento è stata corretta.
 
 ## Funzioni per adozione anticipata {#early-adopter}
 
@@ -39,14 +42,9 @@ La funzione Annulla e Ripeti è ora disponibile per gli autori di contenuti dell
 * Sono incluse le modifiche apportate nel contesto, quelle effettuate tramite il pannello Proprietà, nonché l’aggiunta (o la duplicazione), lo spostamento e l’eliminazione di blocchi.
 * Le operazioni Annulla e Ripeti sono limitate alla sessione corrente del browser.
 
-### Copia/Incolla {#copy-paste}
-
-Gli autori di contenuti possono ora copiare e incollare componenti all’interno della stessa pagina.
-
 ## Altri miglioramenti {#other-improvements}
 
-* Lo stile della barra degli strumenti dell’editor è stato aggiornato per allinearlo meglio al nuovo editor RTF in arrivo.
-* I filtri nella finestra di dialogo del selettore risorse sono stati ripristinati.
+* [La funzione Annulla/Ripristina prima dell&#39;adozione](#undo-redo) non attiva più il ricaricamento della pagina quando un componente viene aggiunto tramite un&#39;operazione Annulla o Ripristina.
 
 ## Rimozioni {#deprecations}
 
