Updated by task 'AUTO_TM_MT_1757005389054' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-manager-cloud-service.en/commit/5ae77905b677a448f739a06a65ba2a284a6b8df6

--- a/help/implementing/cloud-manager/release-notes/2025/2025-8-0.md
+++ b/help/implementing/cloud-manager/release-notes/2025/2025-8-0.md
@@ -1,66 +1,67 @@
 ---
-title: Note sulla versione 2025.9.0 di Cloud Manager
-description: Scopri la versione 2025.9.0 di Cloud Manager in Adobe Experience Manager as a Cloud Service.
+title: Note sulla versione 2025.8.0 di Cloud Manager
+description: Scopri la versione 2025.8.0 di Cloud Manager in Adobe Experience Manager as a Cloud Service.
 feature: Release Information
 role: Admin
-exl-id: 24d9fc6f-462d-417b-a728-c18157b23bbe
-source-git-commit: 98182e835e10b0b29aa2ae21c2a02562ca64111a
+source-git-commit: 7a4fbb5bb217a43a223be01e142458ba9a962cc9
 workflow-type: tm+mt
-source-wordcount: '1214'
-ht-degree: 90%
+source-wordcount: '1402'
+ht-degree: 99%
 
 ---
 
-# Note sulla versione 2025.9.0 di Cloud Manager in Adobe Experience Manager as a Cloud Service {#release-notes}
+# Note sulla versione 2025.8.0 di Cloud Manager in Adobe Experience Manager as a Cloud Service {#release-notes}
 
 <!-- https://wiki.corp.adobe.com/display/DMSArchitecture/%5BKT%5D+Cloud+Manager+2025.08.0+Release -->
 
-Scopri la versione 2025.9.0 di Cloud Manager in AEM (Adobe Experience Manager) as a Cloud Service.
+Scopri la versione 2025.8.0 di Cloud Manager in AEM (Adobe Experience Manager) as a Cloud Service.
 
 Consulta anche le [note sulla versione corrente di Adobe Experience Manager as a Cloud Service](/help/release-notes/release-notes-cloud/release-notes-current.md).
 
 ## Date di pubblicazione {#release-date}
 
-La versione 2025.9.0 di Cloud Manager in AEM as a Cloud Service è stata rilasciata il venerdì 4 settembre 2025.
+La versione 2025.8.0 di Cloud Manager in AEM as a Cloud Service è stata rilasciata il 7 agosto 2025.
 
-La prossima versione è pianificata per il venerdì 2 ottobre 2025.
+La prossima versione è pianificata per il 4 settembre 2025.
 
 ## Novità {#what-is-new}
 
-* **Rinnovare manualmente i certificati di convalida del dominio gestito da Adobe**
+* **Adobe Experience Hub in arrivo**
 
-  È ora possibile rinnovare manualmente i certificati DV (Adobe Managed Domain Validation) da Cloud Manager o dall&#39;API pubblica per aggiornare i certificati in modo proattivo. <!-- CMGR-68738 -->
+  A partire dal 19 agosto 2025, Adobe inizierà un rollout graduale del nuovo Experience Hub per tutti gli utenti di Adobe Experience Manager.
 
-  ![Rinnovo certificato SSL](/help/implementing/cloud-manager/release-notes/assets/ssl-certificate-adobedv-renew.png)
+  Experience Hub è un punto di partenza unificato che offre esperienze personalizzate e contestuali per aiutare gli utenti a raggiungere gli obiettivi più rapidamente. Il rollout si concluderà entro il 26 agosto 2025 e lo renderà disponibile a tutti gli utenti. Il nuovo Experience Hub sarà accessibile direttamente da [experience.adobe.com](https://experience.adobe.com/). Per ulteriori informazioni, vedere [Experience Hub](/help/experience-hub.md).
 
-* **Supporto ora aggiunto per Azure DevOps per archivi privati**
+* **La licenza Edge Delivery Services può essere inclusa in un programma HIPAA in modo autonomo**
 
-  Gli aggiornamenti della documentazione includono passaggi di configurazione per acquisire un Git personalizzato con Azure DevOps e la convalida delle richieste di pull. Vedi [Aggiungere archivi esterni in Cloud Manager](/help/implementing/cloud-manager/managing-code/external-repositories.md).
+  Le organizzazioni con requisiti relativi all’assistenza sanitaria o a dati sensibili possono ora utilizzare Edge Delivery Services in modo autonomo, per abilitare la conformità HIPAA a rigorosi standard normativi. <!-- CMGR-70016 -->
 
-* **Controlli delle richieste di pull per archivi privati**
+* **BYOG è ora disponibile per Edge Delivery Services**
 
-  Cloud Manager ora supporta le pipeline di configurazione con archivi privati su GitHub, Bitbucket, Azure DevOps e GitLab. Consulta [Controlli della richiesta di pull per archivi privati](/help/implementing/cloud-manager/managing-code/github-check-config.md).
+  Cloud Manager ora consente di configurare archivi Git esterni, abilitando flussi di lavoro flessibili per la gestione del codice. <!--(CMGR‑69010, CMGR‑70988) --> Consente inoltre di estrarre il codice da un ramo scelto direttamente nell’interfaccia utente di Cloud Manager, riducendo le attività manuali dell’archivio. Consulta [Configurare il sito Edge Delivery per l’utilizzo di un archivio Git esterno](/help/implementing/cloud-manager/edge-delivery/config-edge-delivery-site-with-byog.md) <!-- (CMGR‑68085)(CMGR-69015) --> <!-- KT: https://wiki.corp.adobe.com/display/DMSArchitecture/%5B2025%5D+Cloud+Manager+-+Bring+Your+Own+Git+with+EDS -->
 
-* **In Cloud Manager è stato aggiunto il supporto per i certificati SSL con ECDSA (Elliptic Curve Digital Signature Algorithm)**
+* **Provisioning automatico per il nuovo componente aggiuntivo dei moduli**
 
-  Cloud Manager ora supporta i certificati ECDSA. Questa funzione garantisce un livello di sicurezza elevato con chiavi di dimensioni più piccole e consente di applicare una crittografia moderna e leggera alle configurazioni CDN. <!-- https://jira.corp.adobe.com/browse/CMGR-62399 -->
+  La clientela che utilizza solo Sites spesso necessita di un modo semplice ed economico per creare moduli di marketing. Il nuovo componente aggiuntivo AEM Forms Sites soddisfa tale esigenza aggiungendo alcune funzioni limitate dei moduli a un programma Sites. Inoltre, crea un chiaro percorso di aggiornamento all’offerta completa di AEM Forms. <!-- (CMGR-64301) --> <!-- KT: CMGR Provisioning Support for AEM Forms Sites Add-On SKU https://wiki.corp.adobe.com/pages/viewpage.action?pageId=3578379797 -->
 
-### Pipeline solo di staging e solo di produzione {#staging-production-only-pipelines}
+  Il componente aggiuntivo:
+   * Si collega a un programma Sites e viene distribuito insieme ad esso, senza necessità di alcun diritto o programma per moduli separato.
+   * È pensato per semplici casi d’uso di moduli di marketing.
+   * Viene visualizzato nell’elenco **Soluzioni e componenti aggiuntivi** durante la creazione o la modifica del programma di produzione, solo quando l’organizzazione IMS dispone di licenze disponibili per il componente aggiuntivo dei moduli.
 
-È stato introdotto il supporto per le [pipeline solo di staging e solo di produzione](/help/implementing/cloud-manager/configuring-pipelines/stage-prod-only.md), che consente di suddividere le pipeline di distribuzione di produzione full stack in distribuzioni più piccole e specializzate.
+     ![Componenti aggiuntivi dei moduli](/help/implementing/cloud-manager/release-notes/assets/forms-add-on.png) *Il componente aggiuntivo dei moduli può essere aggiunto al programma solo se nella tua organizzazione IMS sono disponibili le relative licenze.*
 
-Se ti interessa testare questa nuova funzionalità e condividere un feedback, invia un’e-mail a `Grp-cloudmanager_splitpipelines@adobe.com` dall’indirizzo e-mail associato al tuo Adobe ID.
+     ![Componente aggiuntivo Forms in soluzioni e componenti aggiuntivi durante la creazione di un programma di produzione](/help/implementing/cloud-manager/release-notes/assets/forms-add-on-creating-production-program.png) *Durante la creazione del programma, è possibile selezionare il componente aggiuntivo dei moduli nella soluzione Sites.*
 
+     ![Componente aggiuntivo dei moduli durante la modifica di un programma di produzione](/help/implementing/cloud-manager/release-notes/assets/forms-add-on-editing-production-program.png) *In **Modifica programma**, seleziona il componente aggiuntivo dei moduli per il programma Sites, quindi esegui la pipeline per attivarlo negli ambienti.*
+
+     Per ulteriori informazioni, consulta [Creare un programma di produzione](/help/implementing/cloud-manager/getting-access-to-aem-in-cloud/creating-production-programs.md).
 
 ## Programmi Beta {#private-beta-program}
 
 Partecipa al programma Beta privato di Cloud Manager per ottenere un accesso esclusivo alle funzioni in arrivo prima del rilascio generale.
 
 Sono attualmente disponibili le seguenti opportunità:
-<!--
-### Support for Custom Author Domains in Cloud Service
-
-AEM Cloud Service is going to soon support one custom domain per Author environment.-->
 
 ### Rollback con un solo clic per le implementazioni di pipeline {#one-click-rollback}
 
@@ -138,13 +139,12 @@ Consulta [Gestisci token di accesso](/help/implementing/cloud-manager/managing-c
 
 <!-- If you are interested in testing this new feature and sharing your feedback, send an email to [Grp-CloudManager_BYOG@adobe.com](mailto:grp-cloudmanager_byog@adobe.com) from your email address associated with your Adobe ID. -->
 
-### Aggiungi pipeline di configurazione di Edge Delivery {#add-eds-pipeline}
+### Aggiungere una pipeline di configurazione Edge Delivery {#add-eds-pipeline}
 
 Le pipeline di configurazione sono ora supportate per i siti creati con Edge Delivery Services, espandendo questa funzionalità oltre i singoli ambienti di Cloud Service. È possibile utilizzare le **pipeline di configurazione** per gestire impostazioni quali le regole di filtro del traffico e le configurazioni del firewall per applicazioni web (WAF), se applicabile. Consulta le [configurazioni supportate](/help/operations/config-pipeline.md#configurations).
 
 **Miglioramento recente**
 
-* Le pipeline di configurazione Edge Delivery ora supportano i segreti tramite le variabili della pipeline Cloud Manager.
 * Le pipeline di Edge Delivery Services ora visualizzano **Configurazione** nella colonna **Codice distribuito**, consentendo l’identificazione immediata delle distribuzioni di sola configurazione. <!-- CMGR‑69681 -->
 * Cloud Manager mostra **Aggiungi pipeline Edge Delivery** quando un programma contiene almeno un sito Edge Delivery Services e un dominio mappato. In caso contrario, l’opzione risulta disabilitata e una descrizione comando spiega i requisiti mancanti. <!-- CMGR‑69680 -->
 * Nella scheda **Edge Delivery** è visualizzato un nuovo widget **Pipeline Edge Delivery** in cui sono elencati il nome, lo stato, l’archivio e il ramo di ogni pipeline. <!-- (CMGR-69052) -->
@@ -163,9 +163,12 @@ Consultare [Aggiungere pipeline Edge Delivery](/help/implementing/cloud-manager/
 
 Se ti interessa testare questa nuova funzione e condividere il tuo feedback, invia un’e-mail a [grp-aemeds-config-pipeline-adopter@adobe.com](mailto:grp-aemeds-config-pipeline-adopter@adobe.com) dall’indirizzo e-mail associato al tuo Adobe ID.
 
-## Correzioni di bug {#bug-fixes}
 
-Non sono state apportate correzioni di bug significativi nella versione di settembre di Cloud Manager.
+## Correzioni di bug
+
+* Le pipeline ora distribuiscono variabili solo alla configurazione del dominio Edge Delivery Services attivo, ignorando eventuali configurazioni rimosse durante la ricreazione della pipeline. <!-- (CMGR‑70039) -->
+* L’esecuzione della pipeline ora viene avviata in modo affidabile; è stato risolto un problema che impediva l’avvio di alcune pipeline a causa di errori di gestione delle risorse interne. <!-- (CMGR‑58167) -->
+* La copia del contenuto convalida le autorizzazioni di Cloud Manager e blocca l’avvio del sistema da parte di utenti che non dispongono dei diritti di Responsabile dell’implementazione o di Amministratore. <!-- (CMGR‑62097) -->
 
 
 <!-- ## Known issues {#known-issues} -->
